--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "dependencies": {
         "@tailwindcss/typography": "^0.5.13",
         "mongoose": "^8.3.3",
-        "next": "14.1.4",
-        "react": "^18",
-        "react-dom": "^18"
+        "next": "^14.2.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
-        "eslint-config-next": "14.1.4",
+        "eslint-config-next": "^14.2.3",
         "postcss": "^8",
         "tailwindcss": "^3.3.0"
     }
