--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "mongoose": "^8.3.3",
         "next": "^14.2.3",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-share": "^5.1.0"
     },
     "devDependencies": {
         "autoprefixer": "^10.0.1",
