--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-share": "^5.1.0",
+        "react-toastify": "^10.0.5",
         "sharp": "^0.33.3"
     },
     "devDependencies": {
